--- a/MMMUT/1st year/home.html
+++ b/MMMUT/1st year/home.html
@@ -13,26 +13,13 @@
       referrerpolicy="no-referrer"
     />
 
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/style.css" />
     <title>Study Material</title>
   </head>
 
   <body>
     <!--Adding a NavBar-->
 
-    <div class="topnav" id="myTopnav">
-      <a href="/index.html" class="active">Study Material</a>
-      <a href="30 days of code Winners/index.html"
-        >30 days Of Code Winners</a
-      >
-      <a href="Collaborators/index.html">Collaborators</a>
-      <a href="Contributors/index.html">Contributors</a>
-      <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-        <i class="fa fa-bars"></i>
-      </a>
-    </div>
-
-    <!--Adding a NavBar-->
     <h1 class="heading">Study Material</h1>
 
     <section class="styles" id="styles">
@@ -42,12 +29,11 @@
              <div class="image">
                  <img src="/3d flip hover effect/preview.png" alt="">
              </div>
-            <p>MMMUT</p>
+            <p>CSE</p>
             <div class="btn-group">
-            <a href="MMMUT/index.html">View</a>
+            <a href="CSE/home.html">View</a>
             </div>
         </div>
-        
     </section>
 
     <!-- scroll top btn -->
@@ -103,7 +89,7 @@
       referrerpolicy="no-referrer"
     ></script>
 
-    <script src="script.js"></script>
+    <script src="../script.js"></script>
     
   </body>
 </html>
