--- a/MMMUT/index.html
+++ b/MMMUT/index.html
@@ -20,6 +20,19 @@
   <body>
     <!--Adding a NavBar-->
 
+    <div class="topnav" id="myTopnav">
+      <a href="/index.html" class="active">Study Material</a>
+      <a href="30 days of code Winners/index.html"
+        >30 days Of Code Winners</a
+      >
+      <a href="Collaborators/index.html">Collaborators</a>
+      <a href="Contributors/index.html">Contributors</a>
+      <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+        <i class="fa fa-bars"></i>
+      </a>
+    </div>
+
+    <!--Adding a NavBar-->
     <h1 class="heading">Study Material</h1>
 
     <section class="styles" id="styles">
@@ -29,11 +42,29 @@
              <div class="image">
                  <img src="/3d flip hover effect/preview.png" alt="">
              </div>
-            <p>1st Year MMMUT</p>
+            <p>1st year</p>
             <div class="btn-group">
-            <a href="1st_year_mmmut.html">View</a>
+            <a href="1st year/home.html">View</a>
             </div>
         </div>
+        <div class="stylebox">
+          <div class="image">
+              <img src="/3d flip hover effect/preview.png" alt="">
+          </div>
+         <p>2nd Year</p>
+         <div class="btn-group">
+         <a href="2nd year/home.html">View</a>
+         </div>
+     </div>
+     <div class="stylebox">
+      <div class="image">
+          <img src="/3d flip hover effect/preview.png" alt="">
+      </div>
+     <p>3rd Year</p>
+     <div class="btn-group">
+     <a href="3rd year/home.html">View</a>
+     </div>
+ </div>
     </section>
 
     <!-- scroll top btn -->
