Updated collaborators section

--- a/Collaborators/index.html
+++ b/Collaborators/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=T, initial-scale=1.0">
-    <title>Winners Announced</title>
+    <title>Collaborators</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="styles.css">
     
@@ -12,13 +12,13 @@
 <body>
     
     <section>
-        <h2>Congratulation to Winners</h2>
+        <h2>Collaborators</h2>
         <div class="container">
             <div class="card">
                 <div class="content">
-                    <div class="imgBx"><img src="user.jpg"></div>
+                    <div class="imgBx"><img src="Astha.jpg"></div>
                     <div class="contentBx">
-                        <h3>Winner Name<br><span>Position</span></h3>
+                        <h3>Kumari Astha Rani<br><span></span></h3>
                     </div>
                 </div>
                 <ul class="sci">
@@ -26,7 +26,7 @@
                         <a href="#"><i class="bi bi-facebook"></i></a>
                     </li>
                     <li style="--i:2">
-                        <a href="#"><i class="bi bi-twitter"></i></a>
+                        <a href="#"><i class="bi bi-github"></i></a>
                     </li>
                     <li style="--i:3">
                         <a href="#"><i class="bi bi-instagram"></i></a>
