--- a/Collaborators/index.html
+++ b/Collaborators/index.html
@@ -23,13 +23,13 @@
                 </div>
                 <ul class="sci">
                     <li style="--i:1">
-                        <a href="#"><i class="bi bi-facebook"></i></a>
+                        <a href="https://www.facebook.com/aastha.barnwal.35/"><i class="bi bi-facebook"></i></a>
                     </li>
                     <li style="--i:2">
-                        <a href="#"><i class="bi bi-github"></i></a>
+                        <a href="https://github.com/astha2412"><i class="bi bi-github"></i></a>
                     </li>
                     <li style="--i:3">
-                        <a href="#"><i class="bi bi-instagram"></i></a>
+                        <a href="https://www.instagram.com/itis.astha.barnwal/"><i class="bi bi-instagram"></i></a>
                     </li>
                 </ul>
             </div>
