--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <!-- new card design starts -->
       <div class="stylebox">
              <div class="image">
-                 <img src="/3d flip hover effect/preview.png" alt="">
+                 <img src="/assets/images/mmmutlogo.png" alt="">
              </div>
             <p>MMMUT</p>
             <div class="btn-group">
