--- a/MMMUT/3rd year/home.html
+++ b/MMMUT/3rd year/home.html
@@ -22,6 +22,7 @@
 
     <h1 class="heading">Study Material</h1>
 
+
     <section class="styles" id="styles">
       
       <!-- new card design starts -->
@@ -34,8 +35,68 @@
             <a href="CSE/home.html">View</a>
             </div>
         </div>
-    </section>
+        <div class="stylebox">
+          <div class="image">
+              <img src="/3d flip hover effect/preview.png" alt="">
+          </div>
+         <p>ECE</p>
+         <div class="btn-group">
+         <a href="ECE/home.html">View</a>
+         </div>
+     </div>
 
+     <div class="stylebox">
+      <div class="image">
+          <img src="/3d flip hover effect/preview.png" alt="">
+      </div>
+     <p>IT</p>
+     <div class="btn-group">
+     <a href="IT/home.html">View</a>
+     </div>
+ </div>
+
+ <div class="stylebox">
+  <div class="image">
+      <img src="/3d flip hover effect/preview.png" alt="">
+  </div>
+ <p>CHE</p>
+ <div class="btn-group">
+ <a href="CHE/home.html">View</a>
+ </div>
+</div>
+
+<div class="stylebox">
+  <div class="image">
+      <img src="/3d flip hover effect/preview.png" alt="">
+  </div>
+ <p>EE</p>
+ <div class="btn-group">
+ <a href="EE/home.html">View</a>
+ </div>
+</div>
+
+<div class="stylebox">
+  <div class="image">
+      <img src="/3d flip hover effect/preview.png" alt="">
+  </div>
+ <p>ME</p>
+ <div class="btn-group">
+ <a href="ME/home.html">View</a>
+ </div>
+</div>
+
+
+<div class="stylebox">
+  <div class="image">
+      <img src="/3d flip hover effect/preview.png" alt="">
+  </div>
+ <p>CE</p>
+ <div class="btn-group">
+ <a href="CE/home.html">View</a>
+ </div>
+</div>
+
+    </section>
     <!-- scroll top btn -->
     <a href="#styles" class="fas fa-angle-up" id="scroll-top"></a>
     <!-- scroll back to top -->
