--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
              </div>
             <p>MMMUT</p>
             <div class="btn-group">
-            <a href="MMMUT/index.html">View</a>
+            <a href="#">Coming Soon</a>
+            <!-- <a href="MMMUT/index.html">View</a> -->
             </div>
         </div>
         
