--- a/Contributors/index.html
+++ b/Contributors/index.html
@@ -29,9 +29,9 @@
              <div class="image">
                  <img src="/3d flip hover effect/preview.png" alt="">
              </div>
-            <p>1st Year MMMUT</p>
+            <p>Want to contribute ?</p>
             <div class="btn-group">
-            <a href="1st_year_mmmut.html">View</a>
+            <a href="https://forms.gle/2oWQrzpMzmbY2Cua8">Fill this form</a>
             </div>
         </div>
     </section>
