--- a/index.html
+++ b/index.html
@@ -48,6 +48,16 @@
             <!-- <a href="MMMUT/index.html">View</a> -->
             </div>
         </div>
+      <div class="stylebox">
+             <div class="image">
+                 <img src="/assets/images/images.jpeg" alt="">
+             </div>
+             <p>Join Our telegram group and stay updated</p>
+             
+            <div class="btn-group">
+              <a href="#">Join </a>
+            </div>
+        </div>
         
     </section>
 
