--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
              <p>Join Our telegram group and stay updated</p>
              
             <div class="btn-group">
-              <a href="#">Join </a>
+              <a href="https://t.me/+FA4FtmLFHG4wZGY1">Join </a>
             </div>
         </div>
         
