--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
 
     <div class="topnav" id="myTopnav">
       <a href="/index.html" class="active">Study Material</a>
-      <a href="30 days of code Winners/index.html"
+      <a href="/30 days of code Winners/index.html"
         >30 days Of Code Winners</a
       >
-      <a href="Collaborators/index.html">Collaborators</a>
-      <a href="Contributors/index.html">Contributors</a>
+      <a href="/Collaborators/index.html">Collaborators</a>
+      <a href="/Contributors/index.html">Contributors</a>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">
         <i class="fa fa-bars"></i>
       </a>
@@ -114,7 +114,7 @@
       referrerpolicy="no-referrer"
     ></script>
 
-    <script src="script.js"></script>
+    <script src="/script.js"></script>
     
   </body>
 </html>
