--- a/Contributors/index.html
+++ b/Contributors/index.html
@@ -20,7 +20,20 @@
   <body>
     <!--Adding a NavBar-->
 
-    <h1 class="heading">Study Material</h1>
+    <div class="topnav" id="myTopnav">
+      <a href="/index.html" class="active">Study Material</a>
+      <a href="/30 days of code Winners/index.html"
+        >30 days Of Code Winners</a
+      >
+      <a href="/Collaborators/index.html">Collaborators</a>
+      <a href="/Contributors/index.html">Contributors</a>
+      <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+        <i class="fa fa-bars"></i>
+      </a>
+    </div>
+
+    <!--Adding a NavBar-->
+    <h1 class="heading">Contributors</h1>
 
     <section class="styles" id="styles">
       
