--- a/MMMUT/1st year/CSE/home.html
+++ b/MMMUT/1st year/CSE/home.html
@@ -27,7 +27,7 @@
       <!-- new card design starts here by js -->
       <div class="stylebox">
         <div class="image">
-            <img src="/assets/images/mmmutlogo.png" alt="">
+            <img src="/assets/images/1stSem.png" alt="">
         </div>
        <p>1st Sem</p>
        <div class="btn-group">
@@ -37,7 +37,7 @@
    </div>
    <div class="stylebox">
     <div class="image">
-        <img src="/assets/images/mmmutlogo.png" alt="">
+        <img src="/assets/images/2ndSem.png" alt="">
     </div>
    <p>2nd Sem</p>
    <div class="btn-group">
