--- a/MMMUT/index.html
+++ b/MMMUT/index.html
@@ -40,7 +40,7 @@
       <!-- new card design starts -->
       <div class="stylebox">
              <div class="image">
-                 <img src="/3d flip hover effect/preview.png" alt="">
+                 <img src="/assets/images/1stYear.png" alt="">
              </div>
             <p>1st year</p>
             <div class="btn-group">
@@ -49,7 +49,7 @@
         </div>
         <div class="stylebox">
           <div class="image">
-              <img src="/3d flip hover effect/preview.png" alt="">
+              <img src="/assets/images/2ndYear.png" alt="">
           </div>
          <p>2nd Year</p>
          <div class="btn-group">
@@ -58,7 +58,7 @@
      </div>
      <div class="stylebox">
       <div class="image">
-          <img src="/3d flip hover effect/preview.png" alt="">
+          <img src="/assets/images/3rdYear.png" alt="">
       </div>
      <p>3rd Year</p>
      <div class="btn-group">
@@ -67,7 +67,7 @@
  </div>
      <div class="stylebox">
       <div class="image">
-          <img src="/3d flip hover effect/preview.png" alt="">
+          <img src="/assets/images/4thYear.png" alt="">
       </div>
      <p>Final Year</p>
      <div class="btn-group">
