--- a/Collaborators/index.html
+++ b/Collaborators/index.html
@@ -11,6 +11,22 @@
 </head>
 <body>
     
+    <!-- NavBar -->
+
+    <div class="topnav" id="myTopnav">
+        <a href="/index.html" class="active">Study Material</a>
+        <a href="/30 days of code Winners/index.html"
+          >30 days Of Code Winners</a
+        >
+        <a href="/Collaborators/index.html">Collaborators</a>
+        <a href="/Contributors/index.html">Contributors</a>
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+          <i class="fa fa-bars"></i>
+        </a>
+      </div>
+  
+    <!-- NavBar -->
+    
     <section>
         <h2>Collaborators</h2>
         <div class="container">
