--- a/30 days of code Winners/index.html
+++ b/30 days of code Winners/index.html
@@ -32,7 +32,7 @@
         <div class="container">
             <div class="card">
                 <div class="content">
-                    <div class="imgBx"><img src="user.jpg"></div>
+                    <div class="imgBx"><img src="anurag.jpg"></div>
                     <div class="contentBx">
                         <h3>ANURAG SHUKLA<br><span>MMMUT</span></h3>
                     </div>
@@ -51,7 +51,7 @@
             </div>
             <div class="card">
                 <div class="content">
-                    <div class="imgBx"><img src="user.jpg"></div>
+                    <div class="imgBx"><img src="rajeev.jpg"></div>
                     <div class="contentBx">
                         <h3>RAJEEV KUMAR<br><span>IET Lucknow</span></h3>
                     </div>
@@ -70,7 +70,7 @@
             </div>
             <div class="card">
                 <div class="content">
-                    <div class="imgBx"><img src="user.jpg"></div>
+                    <div class="imgBx"><img src="anikalp.jpg"></div>
                     <div class="contentBx">
                         <h3>ANIKALP JAISWAL<br><span>MMMUT</span></h3>
                     </div>
@@ -92,7 +92,7 @@
         <div class="container">
             <div class="card">
                 <div class="content">
-                    <div class="imgBx"><img src="user.jpg"></div>
+                    <div class="imgBx"><img src="astha.jpeg"></div>
                     <div class="contentBx">
                         <h3>Kumari Astha Rani<br><span>MMMUT</span></h3>
                     </div>
@@ -111,7 +111,7 @@
             </div>
             <div class="card">
                 <div class="content">
-                    <div class="imgBx"><img src="user.jpg"></div>
+                    <div class="imgBx"><img src="akanksha.jpeg"></div>
                     <div class="contentBx">
                         <h3>AKANKSHA<br><span>MMMUT</span></h3>
                     </div>
