--- a/30 days of code Winners/index.html
+++ b/30 days of code Winners/index.html
@@ -42,7 +42,7 @@
                         <a href="#"><i class="bi bi-facebook"></i></a>
                     </li>
                     <li style="--i:2">
-                        <a href="#"><i class="bi bi-twitter"></i></a>
+                        <a href="https://www.linkedin.com/in/therealanuragshukla/"><i class="bi bi-linkedin"></i></a>
                     </li>
                     <li style="--i:3">
                         <a href="#"><i class="bi bi-instagram"></i></a>
@@ -58,13 +58,13 @@
                 </div>
                 <ul class="sci">
                     <li style="--i:1">
-                        <a href="#"><i class="bi bi-facebook"></i></a>
+                        <a href="https://www.facebook.com/profile.php?id=100039739756288"><i class="bi bi-facebook"></i></a>
                     </li>
                     <li style="--i:2">
-                        <a href="#"><i class="bi bi-twitter"></i></a>
+                        <a href="https://www.linkedin.com/in/rajeev-gupta-569846227"><i class="bi bi-linkedin"></i></a>
                     </li>
                     <li style="--i:3">
-                        <a href="#"><i class="bi bi-instagram"></i></a>
+                        <a href="mr__rajeev__gupta"><i class="bi bi-instagram"></i></a>
                     </li>
                 </ul>
             </div>
@@ -80,7 +80,7 @@
                         <a href="#"><i class="bi bi-facebook"></i></a>
                     </li>
                     <li style="--i:2">
-                        <a href="#"><i class="bi bi-twitter"></i></a>
+                        <a href="#"><i class="bi bi-linkedin"></i></a>
                     </li>
                     <li style="--i:3">
                         <a href="#"><i class="bi bi-instagram"></i></a>
@@ -102,7 +102,7 @@
                         <a href="#"><i class="bi bi-facebook"></i></a>
                     </li>
                     <li style="--i:2">
-                        <a href="#"><i class="bi bi-twitter"></i></a>
+                        <a href="#"><i class="bi bi-linkedin"></i></a>
                     </li>
                     <li style="--i:3">
                         <a href="#"><i class="bi bi-instagram"></i></a>
@@ -121,7 +121,7 @@
                         <a href="#"><i class="bi bi-facebook"></i></a>
                     </li>
                     <li style="--i:2">
-                        <a href="#"><i class="bi bi-twitter"></i></a>
+                        <a href="#"><i class="bi bi-linkedin"></i></a>
                     </li>
                     <li style="--i:3">
                         <a href="#"><i class="bi bi-instagram"></i></a>
@@ -140,10 +140,10 @@
                         <a href="#"><i class="bi bi-facebook"></i></a>
                     </li>
                     <li style="--i:2">
-                        <a href="#"><i class="bi bi-twitter"></i></a>
+                        <a href="https://www.linkedin.com/in/anikalp-jaiswal-87a815224"><i class="bi bi-linkedin"></i></a>
                     </li>
                     <li style="--i:3">
-                        <a href="#"><i class="bi bi-instagram"></i></a>
+                        <a href="https://www.instagram.com/anikalp_._8/"><i class="bi bi-instagram"></i></a>
                     </li>
                 </ul>
             </div>
