--- a/30 days of code Winners/index.html
+++ b/30 days of code Winners/index.html
@@ -15,6 +15,11 @@
         font-size:3rem;
         margin-bottom:3vh;
         margin-top:2vh;
+        z-index: 1000;
+       }
+       section::after
+       {
+           z-index: -1;
        }
        .container
        {
