--- a/index.html
+++ b/index.html
@@ -22,9 +22,8 @@
 
     <div class="topnav" id="myTopnav">
       <a href="/index.html" class="active">Study Material</a>
-      <a href="/30 days of code Winners/index.html"
-        >30 days Of Code Winners</a
-      >
+      <a href="/30 days of code Winners/index.html">30 days Of Code Winners</a>
+      <a href="/Wield The Web Winners/index.html">Wield the Web Winners</a>
       <a href="/Collaborators/index.html">Collaborators</a>
       <a href="/Contributors/index.html">Contributors</a>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">
